--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js"></script>  
   <!-- Instantiate single textfield component rendered in the document -->
   <script>
     mdc.textField.MDCTextField.attachTo(
