--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <!-- Required styles for MDC Web -->
+
   <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css" media="screen">
@@ -86,7 +87,7 @@
   </div>
 
   <div class="text-scroll">
-      <p class="color-name" id="specialmargin p1" data-aos="fade-right">Rocking Red</p>
+    <p class="color-name spcmar" data-aos="fade-right">Rocking Red</p>
     <div class="cointainer" data-aos="zoom-in">
       <div class="item itemr itemr--1">#E44236</div>
       <div class="item itemr itemr--2">#B83227</div>
@@ -193,7 +194,7 @@
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js"></script>  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js"></script>
   <!-- Instantiate single textfield component rendered in the document -->
   <script>
     mdc.textField.MDCTextField.attachTo(
@@ -201,6 +202,13 @@
     );
 
     AOS.init();
+
+    $(document).ready(function () {
+      $('[data-toggle="popover"]').popover({
+        placement: 'down',
+        trigger: 'hover'
+      });
+    });
   </script>
 </body>
 
