change item hover effect

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Render textfield component -->
-  <div class="mdc-text-field">
+  <!-- <div class="mdc-text-field">
     <input type="text" id="my-text-field" class="mdc-text-field__input" />
     <label class="mdc-floating-label" for="my-text-field">Hint text</label>
     <div class="mdc-line-ripple"></div>
-  </div>
+  </div> -->
 
   <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
   <script src="script/main.js"></script>
@@ -197,9 +197,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js"></script>
   <!-- Instantiate single textfield component rendered in the document -->
   <script>
-    mdc.textField.MDCTextField.attachTo(
-      document.querySelector(".mdc-text-field")
-    );
+    // mdc.textField.MDCTextField.attachTo(
+    //   document.querySelector(".mdc-text-field")
+    // );
 
     AOS.init();
 
