--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
     <div class="progress-container">
       <div class="progress-bar" id="myBar"></div>
     </div>
+    <!-- <div class="nav-right">
+      <a href="https://github.com/DakshGondaliya/Cool_Colorpicker">
+        <button type="button" class="btn btn-success">
+          Fork me on Github
+        </button>
+      </a>
+    </div> -->
 
     <!-- <div id="navbar-right">
         <div class="button-cointainer">
@@ -90,7 +97,7 @@
     <p class="color-name spcmar" data-aos="fade-right">Rocking Red</p>
     <div class="cointainer" data-aos="zoom-in">
       <div class="item itemr itemr--1">#E44236</div>
-      <div class="item itemr itemr--2">#B83227</div>
+      <div class=" item itemr itemr--2">#B83227</div>
       <div class="item itemr itemr--3">#D63031</div>
       <div class="item itemr itemr--4">#E84342</div>
       <div class="item itemr itemr--5">#FF3031</div>
