--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <a href="#default">
       <img src="images/logo_2.PNG" alt="Logo" id="logo" />
     </a>
+    <p id="information">Click to copy colorcode</p>
     <div class="progress-container">
       <div class="progress-bar" id="myBar"></div>
     </div>
@@ -96,97 +97,97 @@
   <div class="text-scroll">
     <p class="color-name spcmar" data-aos="fade-right">Rocking Red</p>
     <div class="cointainer" data-aos="zoom-in">
-      <div class="item itemr itemr--1">#E44236</div>
-      <div class=" item itemr itemr--2">#B83227</div>
-      <div class="item itemr itemr--3">#D63031</div>
-      <div class="item itemr itemr--4">#E84342</div>
-      <div class="item itemr itemr--5">#FF3031</div>
-      <div class="item itemr itemr--6">#A2F16B</div>
-      <div class="item itemr itemr--7">#EC4849</div>
-      <div class="item itemr itemr--8">#FF3E4D</div>
-      <div class="item itemr itemr--9">#E71C23</div>
-      <div class="item itemr itemr--10">#EA425C</div>
-      <div class="item itemr itemr--11">#E8290C</div>
-      <div class="item itemr itemr--12">#AE1438</div>
-      <div class="item itemr itemr--13">#E83350</div>
-      <div class="item itemr itemr--14">#FF4848</div>
-      <div class="item itemr itemr--15">#FF362E</div>
+      <div class="item itemr itemr--1" data-clipboard-text="#E44236">#E44236</div>
+      <div class=" item itemr itemr--2" data-clipboard-text="#B83227">#B83227</div>
+      <div class="item itemr itemr--3" data-clipboard-text="#D63031">#D63031</div>
+      <div class="item itemr itemr--4" data-clipboard-text="#E84342">#E84342</div>
+      <div class="item itemr itemr--5" data-clipboard-text="#FF3031">#FF3031</div>
+      <div class="item itemr itemr--6" data-clipboard-text="#A2F16B">#A2F16B</div>
+      <div class="item itemr itemr--7" data-clipboard-text="#EC4849">#EC4849</div>
+      <div class="item itemr itemr--8" data-clipboard-text="#FF3E4D">#FF3E4D</div>
+      <div class="item itemr itemr--9" data-clipboard-text="#E71C23">#E71C23</div>
+      <div class="item itemr itemr--10" data-clipboard-text="#EA425C">#EA425C</div>
+      <div class="item itemr itemr--11" data-clipboard-text="#E8290C">#E8290C</div>
+      <div class="item itemr itemr--12" data-clipboard-text="#AE1438">#AE1438</div>
+      <div class="item itemr itemr--13" data-clipboard-text="#E83350">#E83350</div>
+      <div class="item itemr itemr--14" data-clipboard-text="#FF4848">#FF4848</div>
+      <div class="item itemr itemr--15" data-clipboard-text="#FF362E">#FF362E</div>
     </div>
 
     <p class="color-name spcmar" data-aos="fade-right">Beautiful Blue</p>
     <div class="cointainer" data-aos="zoom-in">
-      <div class="item itemb itemb--1">#3498DB</div>
-      <div class="item itemb itemb--2">#2475B0</div>
-      <div class="item itemb itemb--3">#74B9FF</div>
-      <div class="item itemb itemb--4">#0A79DF</div>
-      <div class="item itemb itemb--5">#4834DF</div>
-      <div class="item itemb itemb--6">#30336B</div>
-      <div class="item itemb itemb--7">#487EB0</div>
-      <div class="item itemb itemb--8">#192A56</div>
-      <div class="item itemb itemb--9">#6A89CC</div>
-      <div class="item itemb itemb--10">#0A3D62</div>
-      <div class="item itemb itemb--11">#4BCFFA</div>
-      <div class="item itemb itemb--12">#0ABDE3</div>
-      <div class="item itemb itemb--13">#25CCF7</div>
-      <div class="item itemb itemb--14">#67E6CD</div>
-      <div class="item itemb itemb--15">#3C40C6</div>
+      <div class="item itemb itemb--1" data-clipboard-text="#">#3498DB</div>
+      <div class="item itemb itemb--2" data-clipboard-text="#">#2475B0</div>
+      <div class="item itemb itemb--3" data-clipboard-text="#">#74B9FF</div>
+      <div class="item itemb itemb--4" data-clipboard-text="#">#0A79DF</div>
+      <div class="item itemb itemb--5" data-clipboard-text="#">#4834DF</div>
+      <div class="item itemb itemb--6" data-clipboard-text="#">#30336B</div>
+      <div class="item itemb itemb--7" data-clipboard-text="#">#487EB0</div>
+      <div class="item itemb itemb--8" data-clipboard-text="#">#192A56</div>
+      <div class="item itemb itemb--9" data-clipboard-text="#">#6A89CC</div>
+      <div class="item itemb itemb--10" data-clipboard-text="#">#0A3D62</div>
+      <div class="item itemb itemb--11" data-clipboard-text="#">#4BCFFA</div>
+      <div class="item itemb itemb--12" data-clipboard-text="#">#0ABDE3</div>
+      <div class="item itemb itemb--13" data-clipboard-text="#">#25CCF7</div>
+      <div class="item itemb itemb--14" data-clipboard-text="#">#67E6CD</div>
+      <div class="item itemb itemb--15" data-clipboard-text="#">#3C40C6</div>
     </div>
 
     <p class="color-name spcmar" data-aos="fade-right">Glowing Green</p>
     <div class="cointainer" data-aos="zoom-in">
-      <div class="item itemg itemg--1">#2ECC72</div>
-      <div class="item itemg itemg--2">#26AE60</div>
-      <div class="item itemg itemg--3">#6AB04C</div>
-      <div class="item itemg itemg--4">#6AB04A</div>
-      <div class="item itemg itemg--5">#BADC57</div>
-      <div class="item itemg itemg--6">#43BE31</div>
-      <div class="item itemg itemg--7">#45CE30</div>
-      <div class="item itemg itemg--8">#10A881</div>
-      <div class="item itemg itemg--9">#1BCA9B</div>
-      <div class="item itemg itemg--10">#7CEC9F</div>
-      <div class="item itemg itemg--11">#019031</div>
-      <div class="item itemg itemg--12">#A3CB37</div>
-      <div class="item itemg itemg--13">#75DA8B</div>
-      <div class="item itemg itemg--14">#53E0BC</div>
-      <div class="item itemg itemg--15">#218F76</div>
+      <div class="item itemg itemg--1" data-clipboard-text="#">#2ECC72</div>
+      <div class="item itemg itemg--2" data-clipboard-text="#">#26AE60</div>
+      <div class="item itemg itemg--3" data-clipboard-text="#">#6AB04C</div>
+      <div class="item itemg itemg--4" data-clipboard-text="#">#6AB04A</div>
+      <div class="item itemg itemg--5" data-clipboard-text="#">#BADC57</div>
+      <div class="item itemg itemg--6" data-clipboard-text="#">#43BE31</div>
+      <div class="item itemg itemg--7" data-clipboard-text="#">#45CE30</div>
+      <div class="item itemg itemg--8" data-clipboard-text="#">#10A881</div>
+      <div class="item itemg itemg--9" data-clipboard-text="#">#1BCA9B</div>
+      <div class="item itemg itemg--10" data-clipboard-text="#">#7CEC9F</div>
+      <div class="item itemg itemg--11" data-clipboard-text="#">#019031</div>
+      <div class="item itemg itemg--12" data-clipboard-text="#">#A3CB37</div>
+      <div class="item itemg itemg--13" data-clipboard-text="#">#75DA8B</div>
+      <div class="item itemg itemg--14" data-clipboard-text="#">#53E0BC</div>
+      <div class="item itemg itemg--15" data-clipboard-text="#">#218F76</div>
     </div>
 
     <p class="color-name spcmar" data-aos="fade-right">Young Yellow</p>
     <div class="cointainer" data-aos="zoom-in">
-      <div class="item itemy itemy--1">#EEC213</div>
-      <div class="item itemy itemy--2">#F5C469</div>
-      <div class="item itemy itemy--3">#F4C724</div>
-      <div class="item itemy itemy--4">#F0DF87</div>
-      <div class="item itemy itemy--5">#DFAF2B</div>
-      <div class="item itemy itemy--6">#FAC42F</div>
-      <div class="item itemy itemy--7">#F3B63A</div>
-      <div class="item itemy itemy--8">#FBD28B</div>
-      <div class="item itemy itemy--9">#F3B431</div>
-      <div class="item itemy itemy--10">#FAD02E</div>
-      <div class="item itemy itemy--11">#E5B143</div>
-      <div class="item itemy itemy--12">#F3CC79</div>
-      <div class="item itemy itemy--13">#F9DDA4</div>
-      <div class="item itemy itemy--14">#FFF222</div>
-      <div class="item itemy itemy--15">#E1DA00</div>
+      <div class="item itemy itemy--1" data-clipboard-text="#">#EEC213</div>
+      <div class="item itemy itemy--2" data-clipboard-text="#">#F5C469</div>
+      <div class="item itemy itemy--3" data-clipboard-text="#">#F4C724</div>
+      <div class="item itemy itemy--4" data-clipboard-text="#">#F0DF87</div>
+      <div class="item itemy itemy--5" data-clipboard-text="#">#DFAF2B</div>
+      <div class="item itemy itemy--6" data-clipboard-text="#">#FAC42F</div>
+      <div class="item itemy itemy--7" data-clipboard-text="#">#F3B63A</div>
+      <div class="item itemy itemy--8" data-clipboard-text="#">#FBD28B</div>
+      <div class="item itemy itemy--9" data-clipboard-text="#">#F3B431</div>
+      <div class="item itemy itemy--10" data-clipboard-text="#">#FAD02E</div>
+      <div class="item itemy itemy--11" data-clipboard-text="#">#E5B143</div>
+      <div class="item itemy itemy--12" data-clipboard-text="#">#F3CC79</div>
+      <div class="item itemy itemy--13" data-clipboard-text="#">#F9DDA4</div>
+      <div class="item itemy itemy--14" data-clipboard-text="#">#FFF222</div>
+      <div class="item itemy itemy--15" data-clipboard-text="#">#E1DA00</div>
     </div>
 
     <p class="color-name spcmar" data-aos="fade-right">Glossy Gray</p>
     <div class="cointainer" data-aos="zoom-in">
-      <div class="item itemgr itemgr--1">#7B8788</div>
-      <div class="item itemgr itemgr--2">#99AAAB</div>
-      <div class="item itemgr itemgr--3">#2C3335</div>
-      <div class="item itemgr itemgr--4">#616C6F</div>
-      <div class="item itemgr itemgr--5">#DAE0E2</div>
-      <div class="item itemgr itemgr--6">#535C68</div>
-      <div class="item itemgr itemgr--7">#333945</div>
-      <div class="item itemgr itemgr--8">#2F363F</div>
-      <div class="item itemgr itemgr--9">#586776</div>
-      <div class="item itemgr itemgr--10">#8395A7</div>
-      <div class="item itemgr itemgr--11">#A4B0BD</div>
-      <div class="item itemgr itemgr--12">#777E8B</div>
-      <div class="item itemgr itemgr--13">#758AA2</div>
-      <div class="item itemgr itemgr--14">#47535E</div>
-      <div class="item itemgr itemgr--15">#4C4B4B</div>
+      <div class="item itemgr itemgr--1" data-clipboard-text="#">#7B8788</div>
+      <div class="item itemgr itemgr--2" data-clipboard-text="#">#99AAAB</div>
+      <div class="item itemgr itemgr--3" data-clipboard-text="#">#2C3335</div>
+      <div class="item itemgr itemgr--4" data-clipboard-text="#">#616C6F</div>
+      <div class="item itemgr itemgr--5" data-clipboard-text="#">#DAE0E2</div>
+      <div class="item itemgr itemgr--6" data-clipboard-text="#">#535C68</div>
+      <div class="item itemgr itemgr--7" data-clipboard-text="#">#333945</div>
+      <div class="item itemgr itemgr--8" data-clipboard-text="#">#2F363F</div>
+      <div class="item itemgr itemgr--9" data-clipboard-text="#">#586776</div>
+      <div class="item itemgr itemgr--10" data-clipboard-text="#">#8395A7</div>
+      <div class="item itemgr itemgr--11" data-clipboard-text="#">#A4B0BD</div>
+      <div class="item itemgr itemgr--12" data-clipboard-text="#">#777E8B</div>
+      <div class="item itemgr itemgr--13" data-clipboard-text="#">#758AA2</div>
+      <div class="item itemgr itemgr--14" data-clipboard-text="#">#47535E</div>
+      <div class="item itemgr itemgr--15" data-clipboard-text="#">#4C4B4B</div>
     </div>
   </div>
   </div>
@@ -201,7 +202,7 @@
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
   <!-- Instantiate single textfield component rendered in the document -->
   <script>
     mdc.textField.MDCTextField.attachTo(
@@ -216,6 +217,41 @@
         trigger: 'hover'
       });
     });
+
+    var clipboard = new ClipboardJS('.item');
+
+      clipboard.on('success', function (e) {
+        console.info('Action:', e.action);
+        console.info('Text:', e.text);
+        console.info('Trigger:', e.trigger);
+        
+
+        e.clearSelection();
+      });
+
+      clipboard.on('error', function (e) {
+        console.error('Action:', e.action);
+        console.error('Trigger:', e.trigger);
+      });
+
+      new ClipboardJS('.item', {
+        target: function (trigger) {
+          return trigger.nextElementSibling;
+        }
+      });
+
+      new ClipboardJS('.item', {
+        text: function (trigger) {
+          return trigger.getAttribute('aria-label');
+        }
+      });
+
+      new ClipboardJS('.item', {
+        container: document.getElementById('modal')
+      });
+
+      var clipboard = new ClipboardJS('.item');
+      clipboard.destroy();
   </script>
 </body>
 
