solve copied to clipboard issue

--- a/index.html
+++ b/index.html
@@ -116,30 +116,30 @@
 
     <p class="color-name spcmar" data-aos="fade-right">Beautiful Blue</p>
     <div class="cointainer" data-aos="zoom-in">
-      <div class="item itemb itemb--1" data-clipboard-text="#">#3498DB</div>
-      <div class="item itemb itemb--2" data-clipboard-text="#">#2475B0</div>
-      <div class="item itemb itemb--3" data-clipboard-text="#">#74B9FF</div>
-      <div class="item itemb itemb--4" data-clipboard-text="#">#0A79DF</div>
-      <div class="item itemb itemb--5" data-clipboard-text="#">#4834DF</div>
-      <div class="item itemb itemb--6" data-clipboard-text="#">#30336B</div>
-      <div class="item itemb itemb--7" data-clipboard-text="#">#487EB0</div>
-      <div class="item itemb itemb--8" data-clipboard-text="#">#192A56</div>
-      <div class="item itemb itemb--9" data-clipboard-text="#">#6A89CC</div>
-      <div class="item itemb itemb--10" data-clipboard-text="#">#0A3D62</div>
-      <div class="item itemb itemb--11" data-clipboard-text="#">#4BCFFA</div>
-      <div class="item itemb itemb--12" data-clipboard-text="#">#0ABDE3</div>
-      <div class="item itemb itemb--13" data-clipboard-text="#">#25CCF7</div>
-      <div class="item itemb itemb--14" data-clipboard-text="#">#67E6CD</div>
-      <div class="item itemb itemb--15" data-clipboard-text="#">#3C40C6</div>
+      <div class="item itemb itemb--1" data-clipboard-text="#3498DB">#3498DB</div>
+      <div class="item itemb itemb--2" data-clipboard-text="#2475B0">#2475B0</div>
+      <div class="item itemb itemb--3" data-clipboard-text="#74B9FF">#74B9FF</div>
+      <div class="item itemb itemb--4" data-clipboard-text="#0A79DF">#0A79DF</div>
+      <div class="item itemb itemb--5" data-clipboard-text="#4834DF">#4834DF</div>
+      <div class="item itemb itemb--6" data-clipboard-text="#30336B">#30336B</div>
+      <div class="item itemb itemb--7" data-clipboard-text="#487EB0">#487EB0</div>
+      <div class="item itemb itemb--8" data-clipboard-text="#192A56">#192A56</div>
+      <div class="item itemb itemb--9" data-clipboard-text="#6A89CC">#6A89CC</div>
+      <div class="item itemb itemb--10" data-clipboard-text="#0A3D62">#0A3D62</div>
+      <div class="item itemb itemb--11" data-clipboard-text="#4BCFFA">#4BCFFA</div>
+      <div class="item itemb itemb--12" data-clipboard-text="#0ABDE3">#0ABDE3</div>
+      <div class="item itemb itemb--13" data-clipboard-text="#25CCF7">#25CCF7</div>
+      <div class="item itemb itemb--14" data-clipboard-text="#67E6CD">#67E6CD</div>
+      <div class="item itemb itemb--15" data-clipboard-text="#3C40C6">#3C40C6</div>
     </div>
 
     <p class="color-name spcmar" data-aos="fade-right">Glowing Green</p>
     <div class="cointainer" data-aos="zoom-in">
-      <div class="item itemg itemg--1" data-clipboard-text="#">#2ECC72</div>
-      <div class="item itemg itemg--2" data-clipboard-text="#">#26AE60</div>
-      <div class="item itemg itemg--3" data-clipboard-text="#">#6AB04C</div>
-      <div class="item itemg itemg--4" data-clipboard-text="#">#6AB04A</div>
-      <div class="item itemg itemg--5" data-clipboard-text="#">#BADC57</div>
+      <div class="item itemg itemg--1" data-clipboard-text="#2ECC72">#2ECC72</div>
+      <div class="item itemg itemg--2" data-clipboard-text="#26AE60">#26AE60</div>
+      <div class="item itemg itemg--3" data-clipboard-text="#6AB04C">#6AB04C</div>
+      <div class="item itemg itemg--4" data-clipboard-text="#6AB04A">#6AB04A</div>
+      <div class="item itemg itemg--5" data-clipboard-text="#BADC57">#BADC57</div>
       <div class="item itemg itemg--6" data-clipboard-text="#">#43BE31</div>
       <div class="item itemg itemg--7" data-clipboard-text="#">#45CE30</div>
       <div class="item itemg itemg--8" data-clipboard-text="#">#10A881</div>
@@ -247,7 +247,7 @@
       });
 
       new ClipboardJS('.item', {
-        container: document.getElementById('modal')
+        container: document.getElementById('#modal')
       });
 
       var clipboard = new ClipboardJS('.item');
