--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Render textfield component -->
   <div class="mdc-text-field">
     <input type="text" id="my-text-field" class="mdc-text-field__input" />
-    <label class="mdc-floating-label" for="my-text-field">Hint text</label>
+    <!-- <label class="mdc-floating-label" for="my-text-field">Hint text</label> -->
     <div class="mdc-line-ripple"></div>
   </div>
    
